[project]
name = "apollo-sdk"
version = "0.1.0"
description = "Package for interacting with apollo.io using APIs"
authors = [
    {name = "Jatin",email = "jatin@btawfiq.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "requests (>=2.32.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pytest = "^8.4.1"
flake8 = "^7.3.0"
mypy = "^1.17.1"

